# securemed

./: .gitignore  .seasnoke-env-notes.md  AGENTS.md  DATABASE.md  LEARNINGS.md  PLAN.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.codex/: README.md
.codex/skills/: create-or-update-skills.md  dead-code-removal.md  doc-sync-on-code-change.md  github-branch-commit-push.md  latest-docs-first.md  mcp-and-tool-selection.md  secure-crypto-implementation.md  test-and-quality-gate.md
.codex/skills/create-or-update-skills/: SKILL.md
.codex/skills/dead-code-removal/: SKILL.md
.codex/skills/doc-sync-on-code-change/: SKILL.md
.codex/skills/fastapi/: SKILL.md
.codex/skills/github-branch-commit-push/: SKILL.md
.codex/skills/latest-docs-first/: SKILL.md
.codex/skills/mcp-and-tool-selection/: SKILL.md
.codex/skills/secure-crypto-implementation/: SKILL.md
.codex/skills/test-and-quality-gate/: SKILL.md
.codex/workflows/: docs-sync.md  first-session-bootstrap.md  plan-implement-test-commit.md  security-gate.md
backend/securemed/: __init__.py  main.py
backend/securemed/api/: __init__.py  routes.py  schemas.py
backend/tests/: test_crypto_slice.py  test_full_demo_flow.py  test_key_wrapping.py
circuits/: credential_eligibility.circom
docs/: API.md  DEMO_SCRIPT.md  PHASE3_PRESENTATION_SCRIPT.md  PROTOTYPE_TESTING.md
sample_data/: fake_emr_record.json
scripts/: bootstrap_demo.py  prove_demo_credential.py  run_full_demo.py  setup_zkp.py  verify_audit_log.py
scripts/zkp/: credential_commitment.mjs
(+17 files in other folders)
