[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "securemed-prototype"
version = "0.1.0"
description = "Academic SecureMed cryptography prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43,<50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/securemed"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

